# nikau

./: .build.yml  .build.yml.disabled  Cargo.toml  Dockerfile  PLAN.md  README-CRATES.md  README.md  client.sh  docker-client.sh  docker-server.sh  install.sh  local-client.sh  local-server.sh  server.sh  uninstall.sh
examples/: clipboard.rs  clipboard_smoke.rs  devices.rs  enter_probe.rs  mdns_probe.rs  uinput.rs  wclipboard.rs  x11clipboard.rs
src/: approval.rs  autoupdate.rs  certs.rs  client.rs  control.rs  deviceinput.rs  deviceoutput.rs  deviceutil.rs  devicewatch.rs  discovery.rs  edge.rs  indicator.rs  indicator_spawn.rs  lib.rs  logging.rs  main.rs  messages.rs  notify.rs  rotation.rs  server.rs  setup.rs  single_instance.rs  transport.rs  uninstall.rs  update.rs
src/clipboard/: client.rs  convert.rs  mod.rs  serve.rs  server.rs
src/clipboard/wayland/: reader.rs  state.rs  type_watcher.rs  writer.rs
src/clipboard/x11/: reader.rs  shared.rs  type_watcher.rs  writer.rs
src/device/: handles.rs  input.rs  mod.rs  shortcut.rs  util.rs  watch.rs
src/device/output/: gadget.rs  mod.rs  uinput.rs
src/msgs/: bulk.rs  event.rs  mod.rs  shared.rs
src/network/: approval.rs  certs.rs  throttle.rs  transport.rs
src/x11clipboard/: convert.rs  limited.rs  limited_cursor.rs  mod.rs  reader.rs  shared.rs  writer.rs
