[package]
name = "nikau"
version = "0.3.1"
authors = ["Nick Parker <nick@nickbp.com>"]
license = "AGPL-3.0-or-later"
edition = "2021"
readme = "README-CRATES.md"
description = "Linux network KVM for Wayland/X11/Console"
documentation = "https://nikau.nickbp.com"
homepage = "https://nikau.nickbp.com"
repository = "https://sr.ht/~nickbp/nikau/"
exclude = ["README.md", "Dockerfile", ".build.yml", "*.sh"]

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
atty = "0.2"
bit-vec = "0.8"
bytes = "1.4"
clap = { version = "4.4", features = ["derive"] }
evdev = { version = "0.12", features = ["tokio"] }
home = "0.5"
libc = "0.2"
nonblock = "0.2"
notify = "6.0"
pem = "3.0"
postcard = { version = "1.0", features = ["use-std"] }
quinn = { version = "0.11" }
rcgen = "0.13"
regex = "1.10"
rustls = "0.23"
rustls-pemfile = "2.0"
rustls-pki-types = "1.7"
serde = { version = "1.0", default-features = false }
sha2 = "0.10"
signal-hook = "0.3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.4"
usb-gadget = { version = "0.7", features = ["tokio"] }
walkdir = "2.3"
x11rb-async = { version = "0.13", features = ["xfixes"] }
zip = { version = "2.1", default-features = false, features = ["zstd"] }
zstd = "0.13"

[dev-dependencies]
tempfile = "3.10"