[package]
name = "monux"
version = "2.0.4"
authors = ["Nick Parker <nick@nickbp.com>"]
license = "AGPL-3.0-or-later"
edition = "2021"
readme = "README-CRATES.md"
description = "Linux network KVM for Wayland/X11/Console"
documentation = "https://nikau.nickbp.com"
homepage = "https://nikau.nickbp.com"
repository = "https://github.com/mntzrr/monux"
exclude = ["README.md", "Dockerfile", ".build.yml", "*.sh"]

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
bit-vec = "0.9"
bytes = "1.4"
clap = { version = "4.4", features = ["derive", "string"] }
evdev = { version = "0.13", features = ["tokio"] }
hex = "0.4"
home = "0.5"
ksni = { version = "0.3", features = ["blocking"] }
libc = "0.2"
mdns-sd = "0.20"
nonblock = "0.2"
notify = "8.2"
pem = "3.0"
postcard = { version = "1.0", features = ["use-std"] }
quinn = { version = "0.11" }
rcgen = "0.14"
regex = "1.10"
rustix = "1.1"
rustls = "0.23"
rustls-pemfile = "2.0"
rustls-pki-types = "1.7"
serde = { version = "1.0", default-features = false }
serde_json = "1.0"
sha2 = "0.11"
signal-hook = "0.4"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "process", "net", "io-util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.4"
walkdir = "2.3"
x11rb-async = { version = "0.13", features = ["xfixes"] }
zip = { version = "8.5", default-features = false, features = ["zstd"] }
zstd = "0.13"

os_pipe = { version = "1.1", features = ["io_safety"] }
wayland-client = "0.31"
wayland-protocols = { version = "0.32", features = ["client", "staging"] }
wayland-protocols-wlr = { version = "0.3", features = ["client"] }

[dev-dependencies]
tempfile = "3.10"

# Latency-sensitive daemon: favor runtime performance over compile time.
# panic stays at the default "unwind" and symbols are kept (no strip) so
# backtraces and crash reports stay useful.
[profile.release]
lto = "thin"
codegen-units = 1